--- a/index.html
+++ b/index.html
@@ -10,13 +10,19 @@
 <body>
 
     <div class="container">
-        <div class="navbar">
+        <div class="navbar navbar-closed">
 
             <div class="logo">
                 <svg style="width:24px;height:24px" viewBox="0 0 24 24">
                     <path fill="currentColor" d="M13,3V9H21V3M13,21H21V11H13M3,21H11V15H3M3,13H11V3H3V13Z" />
                 </svg>
                 <h1>Dashboard</h1>
+            </div>
+
+            <div class="hamburger">
+                <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+                    <path fill="currentColor" d="M3,6H21V8H3V6M3,11H21V13H3V11M3,16H21V18H3V16Z" />
+                </svg>
             </div>
 
             <div class="nav-items-top">
@@ -26,7 +32,7 @@
                             <svg style="width:24px;height:24px" viewBox="0 0 24 24">
                                 <path fill="currentColor" d="M10,20V14H14V20H19V12H22L12,3L2,12H5V20H10Z" />
                             </svg>
-                            Home
+                            <div>Home</div>
                         </a>
                     </li>
                     <li>
@@ -34,7 +40,7 @@
                             <svg style="width:24px;height:24px" viewBox="0 0 24 24">
                                 <path fill="currentColor" d="M22,3H2C0.91,3.04 0.04,3.91 0,5V19C0.04,20.09 0.91,20.96 2,21H22C23.09,20.96 23.96,20.09 24,19V5C23.96,3.91 23.09,3.04 22,3M22,19H2V5H22V19M14,17V15.75C14,14.09 10.66,13.25 9,13.25C7.34,13.25 4,14.09 4,15.75V17H14M9,7A2.5,2.5 0 0,0 6.5,9.5A2.5,2.5 0 0,0 9,12A2.5,2.5 0 0,0 11.5,9.5A2.5,2.5 0 0,0 9,7M14,7V8H20V7H14M14,9V10H20V9H14M14,11V12H18V11H14" />
                             </svg>
-                            Profile
+                            <div>Profile</div>
                         </a>
                     </li>
                     <li>
@@ -42,7 +48,7 @@
                             <svg style="width:24px;height:24px" viewBox="0 0 24 24">
                                 <path fill="currentColor" d="M20,2H4A2,2 0 0,0 2,4V22L6,18H20A2,2 0 0,0 22,16V4C22,2.89 21.1,2 20,2Z" />
                             </svg>
-                            Messages
+                            <div>Messages</div>
                         </a>
                     </li>
                     <li>
@@ -50,7 +56,7 @@
                             <svg style="width:24px;height:24px" viewBox="0 0 24 24">
                                 <path fill="currentColor" d="M13.5,8H12V13L16.28,15.54L17,14.33L13.5,12.25V8M13,3A9,9 0 0,0 4,12H1L4.96,16.03L9,12H6A7,7 0 0,1 13,5A7,7 0 0,1 20,12A7,7 0 0,1 13,19C11.07,19 9.32,18.21 8.06,16.94L6.64,18.36C8.27,20 10.5,21 13,21A9,9 0 0,0 22,12A9,9 0 0,0 13,3" />
                             </svg>
-                            History
+                            <div>History</div>
                         </a>
                     </li>
                     <li>
@@ -58,7 +64,7 @@
                             <svg style="width:24px;height:24px" viewBox="0 0 24 24">
                                 <path fill="currentColor" d="M19 13C19.7 13 20.37 13.13 21 13.35V9L15 3H5C3.89 3 3 3.89 3 5V19C3 20.11 3.9 21 5 21H13.35C13.13 20.37 13 19.7 13 19C13 15.69 15.69 13 19 13M14 4.5L19.5 10H14V4.5M22.5 17.25L17.75 22L15 19L16.16 17.84L17.75 19.43L21.34 15.84L22.5 17.25Z" />
                             </svg>
-                            Tasks
+                            <div>Tasks</div>
                         </a>
                     </li>
                     <li>
@@ -66,7 +72,7 @@
                             <svg style="width:24px;height:24px" viewBox="0 0 24 24">
                                 <path fill="currentColor" d="M12,5.5A3.5,3.5 0 0,1 15.5,9A3.5,3.5 0 0,1 12,12.5A3.5,3.5 0 0,1 8.5,9A3.5,3.5 0 0,1 12,5.5M5,8C5.56,8 6.08,8.15 6.53,8.42C6.38,9.85 6.8,11.27 7.66,12.38C7.16,13.34 6.16,14 5,14A3,3 0 0,1 2,11A3,3 0 0,1 5,8M19,8A3,3 0 0,1 22,11A3,3 0 0,1 19,14C17.84,14 16.84,13.34 16.34,12.38C17.2,11.27 17.62,9.85 17.47,8.42C17.92,8.15 18.44,8 19,8M5.5,18.25C5.5,16.18 8.41,14.5 12,14.5C15.59,14.5 18.5,16.18 18.5,18.25V20H5.5V18.25M0,20V18.5C0,17.11 1.89,15.94 4.45,15.6C3.86,16.28 3.5,17.22 3.5,18.25V20H0M24,20H20.5V18.25C20.5,17.22 20.14,16.28 19.55,15.6C22.11,15.94 24,17.11 24,18.5V20Z" />
                             </svg>
-                            Communities
+                            <div>Communities</div>
                         </a>
                     </li>
                 </ul>
@@ -79,7 +85,7 @@
                             <svg style="width:24px;height:24px" viewBox="0 0 24 24">
                                 <path fill="currentColor" d="M12,15.5A3.5,3.5 0 0,1 8.5,12A3.5,3.5 0 0,1 12,8.5A3.5,3.5 0 0,1 15.5,12A3.5,3.5 0 0,1 12,15.5M19.43,12.97C19.47,12.65 19.5,12.33 19.5,12C19.5,11.67 19.47,11.34 19.43,11L21.54,9.37C21.73,9.22 21.78,8.95 21.66,8.73L19.66,5.27C19.54,5.05 19.27,4.96 19.05,5.05L16.56,6.05C16.04,5.66 15.5,5.32 14.87,5.07L14.5,2.42C14.46,2.18 14.25,2 14,2H10C9.75,2 9.54,2.18 9.5,2.42L9.13,5.07C8.5,5.32 7.96,5.66 7.44,6.05L4.95,5.05C4.73,4.96 4.46,5.05 4.34,5.27L2.34,8.73C2.21,8.95 2.27,9.22 2.46,9.37L4.57,11C4.53,11.34 4.5,11.67 4.5,12C4.5,12.33 4.53,12.65 4.57,12.97L2.46,14.63C2.27,14.78 2.21,15.05 2.34,15.27L4.34,18.73C4.46,18.95 4.73,19.03 4.95,18.95L7.44,17.94C7.96,18.34 8.5,18.68 9.13,18.93L9.5,21.58C9.54,21.82 9.75,22 10,22H14C14.25,22 14.46,21.82 14.5,21.58L14.87,18.93C15.5,18.67 16.04,18.34 16.56,17.94L19.05,18.95C19.27,19.03 19.54,18.95 19.66,18.73L21.66,15.27C21.78,15.05 21.73,14.78 21.54,14.63L19.43,12.97Z" />
                             </svg>
-                            Settings
+                            <div>Settings</div>
                         </a>
                     </li>
                     <li>
@@ -87,7 +93,7 @@
                             <svg style="width:24px;height:24px" viewBox="0 0 24 24">
                                 <path fill="currentColor" d="M18.72,14.76C19.07,13.91 19.26,13 19.26,12C19.26,11.28 19.15,10.59 18.96,9.95C18.31,10.1 17.63,10.18 16.92,10.18C13.86,10.18 11.15,8.67 9.5,6.34C8.61,8.5 6.91,10.26 4.77,11.22C4.73,11.47 4.73,11.74 4.73,12A7.27,7.27 0 0,0 12,19.27C13.05,19.27 14.06,19.04 14.97,18.63C15.54,19.72 15.8,20.26 15.78,20.26C14.14,20.81 12.87,21.08 12,21.08C9.58,21.08 7.27,20.13 5.57,18.42C4.53,17.38 3.76,16.11 3.33,14.73H2V10.18H3.09C3.93,6.04 7.6,2.92 12,2.92C14.4,2.92 16.71,3.87 18.42,5.58C19.69,6.84 20.54,8.45 20.89,10.18H22V14.67H22V14.69L22,14.73H21.94L18.38,18L13.08,17.4V15.73H17.91L18.72,14.76M9.27,11.77C9.57,11.77 9.86,11.89 10.07,12.11C10.28,12.32 10.4,12.61 10.4,12.91C10.4,13.21 10.28,13.5 10.07,13.71C9.86,13.92 9.57,14.04 9.27,14.04C8.64,14.04 8.13,13.54 8.13,12.91C8.13,12.28 8.64,11.77 9.27,11.77M14.72,11.77C15.35,11.77 15.85,12.28 15.85,12.91C15.85,13.54 15.35,14.04 14.72,14.04C14.09,14.04 13.58,13.54 13.58,12.91A1.14,1.14 0 0,1 14.72,11.77Z" />
                             </svg>
-                            Support
+                            <div>Support</div>
                         </a>
                     </li>
                     <li>
@@ -95,7 +101,7 @@
                             <svg style="width:24px;height:24px" viewBox="0 0 24 24">
                                 <path fill="currentColor" d="M10,17L6,13L7.41,11.59L10,14.17L16.59,7.58L18,9M12,1L3,5V11C3,16.55 6.84,21.74 12,23C17.16,21.74 21,16.55 21,11V5L12,1Z" />
                             </svg>
-                            Privacy
+                            <div>Privacy</div>
                         </a>
                     </li>
                 </ul>
@@ -140,7 +146,9 @@
             <div class="project-container">
                 <div class="project-card">
                     <div class="project-content">
-                        <h4>Project Title</h4>
+                        <a href="">
+                            <h4>Project Title</h4>
+                        </a>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab, alias cupiditate? Omnis dicta beatae iusto vero? Iusto saepe, debitis non aperiam quibusdam itaque expedita libero rem ea suscipit autem. Consequatur!</p>
                     </div>
                     <div class="project-btns">
@@ -162,7 +170,9 @@
                 </div>
                 <div class="project-card">
                     <div class="project-content">
-                        <h4>Project Title</h4>
+                        <a href="">
+                            <h4>Project Title</h4>
+                        </a>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab, alias cupiditate? Omnis dicta beatae iusto vero? Iusto saepe, debitis non aperiam quibusdam itaque expedita libero rem ea suscipit autem. Consequatur!</p>
                     </div>
                     <div class="project-btns">
@@ -184,7 +194,9 @@
                 </div>
                 <div class="project-card">
                     <div class="project-content">
-                        <h4>Project Title</h4>
+                        <a href="">
+                            <h4>Project Title</h4>
+                        </a>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab, alias cupiditate? Omnis dicta beatae iusto vero? Iusto saepe, debitis non aperiam quibusdam itaque expedita libero rem ea suscipit autem. Consequatur!</p>
                     </div>
                     <div class="project-btns">
@@ -206,7 +218,9 @@
                 </div>
                 <div class="project-card">
                     <div class="project-content">
-                        <h4>Project Title</h4>
+                        <a href="">
+                            <h4>Project Title</h4>
+                        </a>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab, alias cupiditate? Omnis dicta beatae iusto vero? Iusto saepe, debitis non aperiam quibusdam itaque expedita libero rem ea suscipit autem. Consequatur!</p>
                     </div>
                     <div class="project-btns">
@@ -228,7 +242,9 @@
                 </div>
                 <div class="project-card">
                     <div class="project-content">
-                        <h4>Project Title</h4>
+                        <a href="">
+                            <h4>Project Title</h4>
+                        </a>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab, alias cupiditate? Omnis dicta beatae iusto vero? Iusto saepe, debitis non aperiam quibusdam itaque expedita libero rem ea suscipit autem. Consequatur!</p>
                     </div>
                     <div class="project-btns">
@@ -250,7 +266,9 @@
                 </div>
                 <div class="project-card">
                     <div class="project-content">
-                        <h4>Project Title</h4>
+                        <a href="">
+                            <h4>Project Title</h4>
+                        </a>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab, alias cupiditate? Omnis dicta beatae iusto vero? Iusto saepe, debitis non aperiam quibusdam itaque expedita libero rem ea suscipit autem. Consequatur!</p>
                     </div>
                     <div class="project-btns">
