--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 <div class="project-card">
                     <div class="project-content">
                         <a href="">
-                            <h4>Project Title</h4>
+                            <h4>My First Project</h4>
                         </a>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab, alias cupiditate? Omnis dicta beatae iusto vero? Iusto saepe, debitis non aperiam quibusdam itaque expedita libero rem ea suscipit autem. Consequatur!</p>
                     </div>
@@ -171,7 +171,7 @@
                 <div class="project-card">
                     <div class="project-content">
                         <a href="">
-                            <h4>Project Title</h4>
+                            <h4>Another Interesting Project</h4>
                         </a>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab, alias cupiditate? Omnis dicta beatae iusto vero? Iusto saepe, debitis non aperiam quibusdam itaque expedita libero rem ea suscipit autem. Consequatur!</p>
                     </div>
@@ -195,7 +195,7 @@
                 <div class="project-card">
                     <div class="project-content">
                         <a href="">
-                            <h4>Project Title</h4>
+                            <h4>Amazing Project</h4>
                         </a>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab, alias cupiditate? Omnis dicta beatae iusto vero? Iusto saepe, debitis non aperiam quibusdam itaque expedita libero rem ea suscipit autem. Consequatur!</p>
                     </div>
@@ -219,7 +219,7 @@
                 <div class="project-card">
                     <div class="project-content">
                         <a href="">
-                            <h4>Project Title</h4>
+                            <h4>Fantastic Project</h4>
                         </a>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab, alias cupiditate? Omnis dicta beatae iusto vero? Iusto saepe, debitis non aperiam quibusdam itaque expedita libero rem ea suscipit autem. Consequatur!</p>
                     </div>
@@ -243,7 +243,7 @@
                 <div class="project-card">
                     <div class="project-content">
                         <a href="">
-                            <h4>Project Title</h4>
+                            <h4>Best Project</h4>
                         </a>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab, alias cupiditate? Omnis dicta beatae iusto vero? Iusto saepe, debitis non aperiam quibusdam itaque expedita libero rem ea suscipit autem. Consequatur!</p>
                     </div>
@@ -267,7 +267,7 @@
                 <div class="project-card">
                     <div class="project-content">
                         <a href="">
-                            <h4>Project Title</h4>
+                            <h4>Ultimate Project</h4>
                         </a>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab, alias cupiditate? Omnis dicta beatae iusto vero? Iusto saepe, debitis non aperiam quibusdam itaque expedita libero rem ea suscipit autem. Consequatur!</p>
                     </div>
@@ -299,11 +299,11 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     </div>
                     <div class="announcement-card">
-                        <h5>An Announement</h5>
+                        <h5>Another Announement</h5>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     </div>
                     <div class="announcement-card">
-                        <h5>An Announement</h5>
+                        <h5>Final Announement</h5>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     </div>
                 </div>
@@ -314,29 +314,29 @@
                     <div class="trending-card">
                         <img src="./images/trending-01.png" alt="trending 1">
                         <div>
-                            <h5>@someuser</h5>
-                            <p>short explanation</p>
+                            <h5>@colorful_dream</h5>
+                            <p>This is trending</p>
                         </div>
                     </div>
                     <div class="trending-card">
-                        <img src="./images/trending-01.png" alt="trending 1">
+                        <img src="./images/trending-02.png" alt="trending 2">
                         <div>
-                            <h5>@someuser</h5>
-                            <p>short explanation</p>
+                            <h5>@random_noise</h5>
+                            <p>Is this trending? Yes!</p>
                         </div>
                     </div>
                     <div class="trending-card">
-                        <img src="./images/trending-01.png" alt="trending 1">
+                        <img src="./images/trending-03.png" alt="trending 3">
                         <div>
-                            <h5>@someuser</h5>
-                            <p>short explanation</p>
+                            <h5>@pixel_maker</h5>
+                            <p>Also trending</p>
                         </div>
                     </div>
                     <div class="trending-card">
-                        <img src="./images/trending-01.png" alt="trending 1">
+                        <img src="./images/trending-04.png" alt="trending 4">
                         <div>
-                            <h5>@someuser</h5>
-                            <p>short explanation</p>
+                            <h5>@english_pancake</h5>
+                            <p>This one is trending, too</p>
                         </div>
                     </div>
                 </div>
