Update colors. Add favicon.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
+    <link rel="shortcut icon" href="./images/dashboard-favicon.svg" type="image/x-icon">
     <title>Admin Dashboard</title>
 </head>
 <body>
@@ -126,8 +127,8 @@
                     <title>Notifications</title>
                 </svg>
             </div>
-            <div class="avatar-sm"><img src="./images/avatar.png" width="20px" alt="avatar"></div>
-            <div class="username-sm">David Green</div>
+            <div class="avatar-sm"><a href=""><img src="./images/avatar.png" width="20px" alt="avatar"></a></div>
+            <div class="username-sm"><a href="">David Green</a></div>
         </div>
         <div class="header-bottom">
             <div class="avatar-lg"><img src="./images/avatar.png" width="35px" alt="avatar"></div>
